// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogBox Popup component at small screen size should render properly when it is closed 1`] = `
.c0 {
  background: #ffffff;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  min-height: 200px;
  box-shadow: 0 0.4rem 3.2 rgba(67,84,101,0.5);
  box-sizing: border-box;
  border-radius: 1.6rem;
  overflow-y: scroll;
  max-height: 80%;
  width: calc(100% - 2.4rem);
}

@media (min-width:768px) and (max-width:1439px) {
  .c0 {
    max-width: 72%;
    min-width: 200px;
    padding: 4.8rem 3.2rem;
  }
}

@media (min-width:1440px) {
  .c0 {
    padding: 4.8rem 3.2rem;
    min-width: 200px;
    max-width: 103.6rem;
    max-height: 80%;
  }
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`DialogBox Popup component at small screen size should render properly when it is open 1`] = `
.c0 {
  background: #ffffff;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  min-height: 200px;
  box-shadow: 0 0.4rem 3.2 rgba(67,84,101,0.5);
  box-sizing: border-box;
  border-radius: 1.6rem;
  overflow-y: scroll;
  max-height: 80%;
  width: calc(100% - 2.4rem);
}

@media (min-width:768px) and (max-width:1439px) {
  .c0 {
    max-width: 72%;
    min-width: 200px;
    padding: 4.8rem 3.2rem;
  }
}

@media (min-width:1440px) {
  .c0 {
    padding: 4.8rem 3.2rem;
    min-width: 200px;
    max-width: 103.6rem;
    max-height: 80%;
  }
}

<div>
  <div
    class="c0"
    open=""
  />
</div>
`;
